Test files/ebnf clean/ebnf_clean.txt
program     = prog_defn , { prog_defn } ;

prog_defn   = "module" , name , ":"
            , port_list , "->" , port_list , ";"
            , { statement }
            , "end" , ";" ;

(* ports just need name and optional width *)
port_list   = [ port , { "," , port } ] ;
port        = name , [ "[" , integer , "]" ] ;

statement   = declaration| assignment| monitor | instance| comment;

declaration = wire_decl
            | clock_decl
            | switch_decl
            | dtype_decl ;

wire_decl   = "wire"   , name , [ "[" , integer , "]" ] , ";" ;
clock_decl  = "clock"  , name , "[" , integer , "]"     , ";" ;
switch_decl = "switch" , name , "=" , ( "0" | "1" )     , ";" ;
dtype_decl  = "dtype"  , name                           , ";" ;

(* assignments cover both combinatorial and port connections *)
assignment  = lhs , ( "=" | "<=" ) , rhs , ";" ;
lhs         = signal_ref | port_ref ;
rhs         = or_expr ;

or_expr     = and_expr  , { "+" , and_expr } ;
and_expr    = xor_expr  , { "*" , xor_expr } ;
xor_expr    = factor    , { "^" , factor } ;
factor      = [ "!" ]   , ( signal_ref | "(" , or_expr , ")" ) ;

(* simple signal reference -- parser resolves what kind it is *)
signal_ref  = name , [ "[" , integer , [ ":" , integer ] , "]" ] ;

(* dtype port reference *)
port_ref    = name , "." , port_name ;
port_name   = "CLK" | "DATA" | "SET" | "CLEAR" | "Q" | "QBAR" ;

monitor     = "monitor" , ( signal_ref | port_ref ) , ";" ;

instance	= "instance", name, "(", bind_list, "->", bind_list, ")", ";";

bind_list  = [ signal_ref , { "," , signal_ref } ] ;

comment = "\\", [digit|letter| " "] ;

name		= letter, {letter | digit | "_" };
integer = "0" | nonzero_digit , { digit } ;
nonzero_digit = "1" | "2" | "3" | "4" | "5" | "6" | "7" | "8" | "9" ;
letter 		= "A" | "B" | "C" | "D" | "E" | "F" | "G" | "H" | "I" | "J" | "K" | "L" | "M" | "N" | "O" | "P" | "Q" | "R" | "S" | "T" | "U" | "V" | "W" | "X" | "Y" | "Z" | "a" | "b" | "c" | "d" | "e" | "f" | "g" | "h" | "i" | "j" | "k" | "l" | "m" | "n" | "o" | "p" | "q" | "r" | "s" | "t" | "u" | "v" | "w" | "x" | "y" | "z" ;
digit 		= "0" | "1" | "2" | "3" | "4" | "5" | "6" | "7" | "8" | "9";
